<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryDark"
    android:orientation="vertical"
    tools:context="com.example.android.musicapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <TextView
            style="@style/menuButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@color/colorSecondary"
            android:text="@string/librariesButton" />

        <TextView
            android:id="@+id/nowPlayingButton"
            style="@style/menuButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@color/colorSecondary"
            android:text="@string/nowPlayingButton" />

        <TextView
            style="@style/menuButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@color/colorSecondary"
            android:text="@string/playlistsButton" />

        <TextView
            style="@style/menuButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@color/colorSecondary"
            android:text="@string/discoverButton" />
    </LinearLayout> <!-- MENU -->

    <LinearLayout
        style="@style/HomeActivityLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@color/colorSecondaryLight"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/recentlyAdded"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="32sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/colorSecondary"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SONG23" />

                <TextView
                    style="@style/artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Artist2" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/colorSecondary"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SONG11" />

                <TextView
                    style="@style/artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Artist1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@color/colorSecondary"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/song"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SONG35" />

                <TextView
                    style="@style/artist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Artist3" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout> <!-- RECENTLY ADDED -->

    <TextView
        android:id="@+id/search"
        style="@style/HomeActivityLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorSecondaryLight"
        android:gravity="center"
        android:text="@string/searchButton"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="italic" /> <!-- SEARCH -->

    <TextView
        android:id="@+id/progress"
        style="@style/menuButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/colorSecondary"
        android:text="@string/playerPlaceholder"
        android:textSize="20sp" /> <!-- NOW PLAYING -->

</LinearLayout>
